@@ -38,6 +38,7 @@ namespace irr
 			WindowId(0),
 			LoggingLevel(ELL_INFORMATION),
 			DisplayAdapter(0),
+			UsePerformanceTimer(true),
 			SDK_version_do_not_use(IRRLICHT_SDK_VERSION)
 		{
 		}
@@ -66,6 +67,7 @@ namespace irr
 			WindowId = other.WindowId;
 			LoggingLevel = other.LoggingLevel;
 			DisplayAdapter = other.DisplayAdapter;
+			UsePerformanceTimer = other.UsePerformanceTimer;
 			return *this;
 		}
 
@@ -244,6 +246,13 @@ namespace irr
 		//! Allows to select which graphic card is used for rendering when more than one card is in the system.
 		/** So far only supported on D3D */
 		u32 DisplayAdapter;
+
+		//! Enables use of high performance timers on Windows platform.
+		/** When performance timers are not used, standard GetTickCount()
+		is used instead which usually has worse resolution, but also less
+		problems with speed stepping and other techniques.
+		*/
+		bool UsePerformanceTimer;
 
 		//! Don't use or change this parameter.
 		/** Always set it to IRRLICHT_SDK_VERSION, which is done by default.
